# kaggle_mcp_server

./: kaggle_mcp_server.py  pyproject.toml
